Fix missing borders on icons

--- a/src/components/Navigation/Topnav.less
+++ b/src/components/Navigation/Topnav.less
@@ -92,7 +92,10 @@
 }
 
 .Topnav__item--badge {
-  top: -1px !important;
+  i {
+    position: relative;
+    top: -3px;
+  }
 }
 
 .Topnav__item-user {
@@ -113,8 +116,4 @@
       display: inline;
     }
   }
-}
-
-.Topnav__item--dropdown {
-  border-bottom: none !important;
 }
